feat: dev put crime and patch
